# ash-examples

./: Cargo.toml  README.md  compile_shaders.sh  run_no_validation.sh
shaders/: frag.spv  vert.spv
shaders/compute/: shader.spv
src/: create_objs.rs  destructor.rs  device_destroyable.rs  errors.rs  ferris.rs  gpu_data.rs  last_frames_durations.rs  main.rs  render_pass.rs  renderer.rs  threads_manager.rs  utility.rs  validation_layers.rs
src/allocator/: logging.rs  memory_bound.rs  mod.rs  staging_buffers.rs
src/command_pools/: compute.rs  graphics.rs  mod.rs  transfer.rs
src/command_pools/initialization/: mod.rs
src/compute/: ferris.rs  gpu_data.rs  mod.rs  particle_buffers.rs  renderer.rs  sync_renderer.rs
src/device/: device_selector.rs  logical_device.rs  mod.rs  queues.rs
src/initialization/: device_selector.rs  mod.rs
src/initialization/device/: device_selector.rs  logical_device.rs  mod.rs
src/pipelines/: cache.rs  graphics.rs  mod.rs
src/render/: create_objs.rs  errors.rs  format_conversions.rs  gpu_data.rs  mod.rs  render_object.rs  render_pass.rs  render_targets.rs  renderer.rs  screenshot_buffer.rs  swapchain.rs  sync_renderer.rs
src/render/allocator/: staging_buffers.rs
src/render/command_pools/: compute.rs  compute_transfer.rs  graphics.rs  mod.rs
src/render/command_pools/initialization/: mod.rs
src/render/compute/: ferris.rs  gpu_data.rs  mod.rs  particle_buffers.rs  renderer.rs  sync_renderer.rs
src/render/descriptor_sets/: compute_descriptor_pool.rs  descriptor_pool.rs  mod.rs  writes.rs
src/render/graphics/: gpu_data.rs  mod.rs  render_targets.rs  renderer.rs  screenshot_buffer.rs  swapchain.rs  sync_renderer.rs
src/render/initialization/: device_selector.rs  instance.rs  mod.rs  post_window_init.rs  pre_window_init.rs  validation_layers.rs
src/render/initialization/device/: device_selector.rs  logical_device.rs  mod.rs  physical_device.rs  queues.rs
src/render/pipelines/: cache.rs  compute.rs  graphics.rs  mod.rs
src/render/shaders/: mod.rs  shader.rs  shader.vert
src/render/shaders/compute/: mod.rs  shader.comp
src/render/vertices/: mod.rs  particle.rs
src/shaders/: shader.rs
src/vertices/: mod.rs
